fix: home timeline order

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-{%- assign timelines = site.timelines | reverse -%}
+<!-- {%- assign timelines = site.timelines | reverse -%} -->
+{%- assign timelines = site.timelines -%}
 {%- assign testimonials = site.testimonials | reverse -%}
 {%- assign portfolios = site.portfolios -%}
 
