hide starred for now

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,12 +39,12 @@ layout: default
       <div class="overlay">
         <a class="primary-button mt2" href="{{ portfolio.permalink | relative_url }}">{{portfolio.title}}</a>
       </div>
-      {%- if portfolio.starred -%}
+      <!-- {%- if portfolio.starred -%}
       <p
         style="position: absolute; margin: 4px 0px 0px 180px; color: #{{ portfolio.bg-color }}; text-shadow: 0px 0px 4px #{{ portfolio.bg-color }}3b">
         ★
-      </p>
-      {%- endif -%}
+      </p> -->
+      <!-- {%- endif -%} -->
     </div>
     {%- endunless -%}
     {% endfor %}
