--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -60,3 +60,9 @@ layout: default
   // }
   // countDays()
 </script>
+
+{% if page.comments == true %}
+<script src="https://utteranc.es/client.js" repo="theachoem/theachoem" issue-term="title" theme="github-light"
+  crossorigin="anonymous" async>
+  </script>
+{% endif %}
